Fix layout bugs for Safari (#214)
* Fix layout bugs for Safari

* keep all dimensions

* fix focus aside scroll

* fix height adjust on firefox, safari wip

* get rid of viewport units in styles package and use them in storybook instead

--- a/examples/meet/styles/globals.css
+++ b/examples/meet/styles/globals.css
@@ -8,19 +8,10 @@ html {
 
 html,
 body,
-#__next {
-  width: 100%;
-  height: 100%;
-}
-
+#__next,
 main {
   width: 100%;
   height: 100%;
-  display: grid;
-  gap: 1rem;
-  justify-content: center;
-  place-content: center;
-  justify-items: center;
 }
 
 .header {
