--- a/packages/styles/scss/components/_participant-media.scss
+++ b/packages/styles/scss/components/_participant-media.scss
@@ -3,7 +3,7 @@
   height: 100%;
   object-fit: cover;
   object-position: center;
-  aspect-ratio: 16 / 10;
+  // aspect-ratio: 16 / 10;
   background-color: #000;
 
   // Flip the local participant camera video.
