--- a/packages/styles/scss/layout-components/_focus-layout.scss
+++ b/packages/styles/scss/layout-components/_focus-layout.scss
@@ -11,13 +11,15 @@
   display: grid;
   grid-template-columns: 1fr 5fr;
   gap: var(--grid-gap);
+  width: 100%;
+  max-height: 100%;
   padding: var(--grid-gap);
 
   > aside {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     gap: var(--grid-gap);
+    max-height: 100%;
     overflow-y: auto;
 
     .participant-tile {
@@ -27,7 +29,8 @@
 
   // Prevent screenshare from expanding out of bounds
   > div {
-    max-height: calc(100vh - var(--control-bar-height) - (var(--grid-gap) * 2));
+    width: 100%;
+    max-height: calc(100% - var(--control-bar-height) - (var(--grid-gap) * 2));
   }
 }
 
